--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 		  </p>
 
 		  <p>
-			<a href="https://drive.google.com/file/d/13AM0AE_C1M2NOEbIr2YJiApGSYkU-xVC/view?usp=sharing" class="btn btn-light btn-learn btn-add-space">
+			<a href="https://drive.google.com/file/d/1uLcaiVHrV4rxvgQk-fIdFO74JHXWhnOl/view?usp=sharing" class="btn btn-light btn-learn btn-add-space">
 			  СКАЧАТЬ РЕЗЮМЕ НА РУССКОМ
 			  <i class="fas fa-download"></i>
 			</a>
 
-			<a href="https://drive.google.com/file/d/1wFDcz5f05WdOHxr-optqoJZOrOGwKNd8/view?usp=sharing" class="btn btn-light btn-learn">
+			<a href="https://drive.google.com/file/d/1MsnajVRE5b2LWwUuTk0fW_Q33SFK-cUV/view?usp=sharing" class="btn btn-light btn-learn">
 			  DOWNLOAD CV (ENGLISH)
 			  <i class="fas fa-download"></i>
 			</a>
@@ -288,7 +288,7 @@
 
 							<li>
 								<a href="https://github.com/DianaS96/Spb_cars_sales">
-									<h5>Веб-приложение для предсказания стоимости подержаной машины в СПб по состоянию на середину февраля 2022г 🚗🤑</h5>
+									<h5>Веб-приложение для предсказания стоимости подержанной машины в СПб по состоянию на середину февраля 2022г 🚗🤑</h5>
 								</a>
 								<p><h6>Функционал:</h6>
 									- Пользователю необходимо ввести параметры машины: марка, тип кузова, год выпуска, мощность двигателя (л.с.), привод, коробка передач, гарантия)<br>
