--- a/index_en.html
+++ b/index_en.html
@@ -77,7 +77,7 @@
 			  However, I realized limited usage of Alteryx in data analysis, and thus I started learning programming languages.
 			  At first, I accidentally stumbled upon Harvard University's CS50 course.
 			  After completing this course, interest in programming increased.
-			  Interner surfing led me to the School 42 website.
+			  Internet surfing led me to the School 42 website.
 		  </p>
 		  <p>
 			  In July 2021 I attended a trial month of coding at School 42 (piscine).
