--- a/index.html
+++ b/index.html
@@ -180,170 +180,212 @@
 	  </div>
 	</section>
 
-	<div class="container">
+	<div class="container" style="margin-bottom: 2rem;">
+		
 		<div class="text-center">
 			<h1 id="scrollspyHeading3">Проекты</h1>
 		</div>
-		<div class="card my-3">
-			<div class="accordion accordion-flush" id="accordionFlushExample">
-				<div class="accordion-item">
-				<h2 class="accordion-header" id="flush-headingOne">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-					Проекты, выполненные в рамках обучения в Школе 42
-					</button>
-				</h2>
-				<div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-					<div class="accordion-body">
-						<table>
-							<tr style="height: 2.5rem; background-color: #f4f4f4;">
-							  <th style="text-align: center;">Проект</th>
-							  <th style="text-align: center;">Описание</th>
-							  <th style="text-align: center;">Оценка</th>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Libft">Libft</a>📚</td>
-								<td>Мой первый проект в Школе 42 - создание собственной библиотеки на C
-								  (написание стандартных функций из библиотеки libc и ряда вспомогательных функций для работы со строками и односвязными списками).
-								</td>
-								<td style="text-align: center;">✅111/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/get_next_line">Get Next Line</a>🔁</td>
-								<td>Функция построчного чтения из файлового дескриптора.</td>
-								<td style="text-align: center;">✅125/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Printf">Printf</a>🖨</td>
-								<td>Функция ft_printf, имитирующая действия функции printf в части обработки спецификаторов: cspdiuxX%.</td>
-								<td style="text-align: center;">✅100/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Push_swap">Push swap</a>🔢</td>
-								<td>Сортировка входящих чисел методом <a href="https://ru.wikipedia.org/wiki/%D0%9F%D0%BE%D1%80%D0%B0%D0%B7%D1%80%D1%8F%D0%B4%D0%BD%D0%B0%D1%8F_%D1%81%D0%BE%D1%80%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%BA%D0%B0#:~:text=%D0%9F%D0%BE%D1%80%D0%B0%D0%B7%D1%80%D1%8F%D0%B4%D0%BD%D0%B0%D1%8F%20%D1%81%D0%BE%D1%80%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%BA%D0%B0%20(%D0%B0%D0%BD%D0%B3%D0%BB.,%D0%A1%D1%83%D1%89%D0%B5%D1%81%D1%82%D0%B2%D1%83%D1%8E%D1%82%20%D1%81%D1%82%D0%B0%D0%B1%D0%B8%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%B2%D0%B0%D1%80%D0%B8%D0%B0%D0%BD%D1%82%D1%8B.&text=%2C%20%D0%B3%D0%B4%D0%B5%20w%20%E2%80%94%20%D0%BA%D0%BE%D0%BB%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%BE%20%D0%B1%D0%B8%D1%82%2C%20%D1%82%D1%80%D0%B5%D0%B1%D1%83%D0%B5%D0%BC%D1%8B%D1%85%20%D0%B4%D0%BB%D1%8F%20%D1%85%D1%80%D0%B0%D0%BD%D0%B5%D0%BD%D0%B8%D1%8F%20%D0%BA%D0%B0%D0%B6%D0%B4%D0%BE%D0%B3%D0%BE%20%D0%BA%D0%BB%D1%8E%D1%87%D0%B0.">Radix</a>
-									 с помощью 2 стеков и набора инструкций за минимальное число шагов.</td>
-								<td style="text-align: center;">✅84/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Minitalk">Minitalk</a>📠</td>
-								<td>Программа обмена данными с использованием сигналов UNIX (SIGUSR1 и SIGUSR2).</td>
-								<td style="text-align: center;">✅125/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Philosophers">Philosophers</a>🍴🍝</td>
-								<td>Решение проблемы обедающих философов на С.</td>
-								<td style="text-align: center;">✅100/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/FDF">FDF</a>🌎</td>
-								<td>Отрисовка 3D карты на основе заданных координат.</td>
-								<td style="text-align: center;">✅125/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/Minishell">Minishell</a>🐌</td>
-								<td>Создание аналога bash.<br>
-								Функционал: <br>
-								<ul>
-									<li>обработка одинарных и двойных кавычек</li>
-									<li>обработка редиректов ('<', '<<', '>', '>>') и пайпов ('|')</li>
-									<li>обработка переменных окружения</li>
-									<li>вывод статуса предыдущей команды через 'echo $?'</li>
-									<li>реализация встроенных функций: echo, cd, pwd, export, unset, env, exit</li>
-									<li>обработка сигналов:<br>
-										- Ctrl+C - отображает приглашение с новой строки<br>
-										- Ctrl+D - завершает работу оболочки<br>
-										- Ctrl+\ - сигнал игнорируется<br>
-									</li>
-								</ul>
-								</td>
-								<td style="text-align: center;">В процессе</td>
-							</tr>
-						  </table>
+
+		<div class="container">
+			<div>
+				<h2>Pet-Проекты</h2>
+			</div>
+
+			<div class="row">
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Food.jpg" alt="Image of food">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/Health_diet">Трэкинг КБЖУ</a>
+							</h5>
+							<p class="card-text">Веб-приложение для отслеживания КБЖУ (калории, белки, жиры, углеводы)</p>
+						</div>
 					</div>
 				</div>
-				</div>
-				<div class="accordion-item">
-				<h2 class="accordion-header" id="flush-headingTwo">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-					Pet проекты
-					</button>
-				</h2>
-				<div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-					<div class="accordion-body">
-						<ul style="list-style-type:square;">
-							<li>
-								<a href="https://github.com/DianaS96/Health_diet">
-									<h5>Веб-приложение для отслеживания КБЖУ (калории, белки, жиры, углеводы) 🥩🥗🍔</h5>
-								</a>
-								<p><h6>Функционал:</h6>
-								- Для использования приложения необходимо зарегистрироваться и войти в аккаунт.<br>
-								- Пользователь имеет доступ к таблице калорийности всех продуктов.<br>
-								- Пользователь может добавлять в дневник информацию о приеме пищи (продукт, прием пищи, кол-во в граммах).<br>
-								- Пользователь может просматривать статистику по КБЖУ и по видам продуктов за определенные дни.
-								</p>
-								<p>
-									<h6>Технологии: </h6>
-									Python3.10 (Flask, sqlite3, pandas, plotly и прочие библиотеки), HTML, CSS, Bootstrap, SQL, Docker.
-								</p>
-							</li>
 
-							<li>
-								<a href="https://github.com/DianaS96/Spb_cars_sales">
-									<h5>Веб-приложение для предсказания стоимости подержанной машины в СПб по состоянию на середину февраля 2022г 🚗🤑</h5>
-								</a>
-								<p><h6>Функционал:</h6>
-									- Пользователю необходимо ввести параметры машины: марка, тип кузова, год выпуска, мощность двигателя (л.с.), привод, коробка передач, гарантия)<br>
-									- После ввода данных пользователь увидит ориентировочную цену.
-								</p>
-								<p>
-									<h6>Технологии: </h6>
-									Python3.10 (Flask, pandas, beautifulsoup, scikit-learn, CatBoost, LightGBM, XGBoost и прочие библиотеки), HTML, CSS, Bootstrap.
-								</p>
-							</li>
-
-							<li>
-								<a href="https://github.com/DianaS96/Covid-19_visualization">
-									<h5>Веб-приложение для вывода статистики по распространению COVID-19 😷</h5>
-								</a>
-								<p><h6>Функционал:</h6>
-									- Пользователю необходимо выбрать страну (либо мир в целом) для вывода статистики<br>
-									- После ввода данных пользователь увидит статистику<br>
-									Статистика по определенным странам: общее и дневное количество заражений и смертей.<br>
-									Миировая статистика:  общее и дневное количество заражений и смертей, Топ-10 стран по кол-ву заражений и смертей, карта распространения COVID-19.<br>
-								</p>
-	
-								<p>
-									<h6>Технологии: </h6>
-									Python3.10 (Flask, pandas, plotly, matplotlib и прочие библиотеки), HTML, CSS, Bootstrap, Docker.
-								</p>
-							</li>
-
-							<li>
-								<a href="https://github.com/DianaS96/Phonebook">
-									<h5>Консольное приложение - телефонный справочник ☎️</h5>
-								</a>
-								<p><h6>Функционал:</h6>
-									- Ввод информации о человеке<br>
-									- Печать информации из справочника<br>
-									- Удаление данных из справочника по определенному id<br>
-									- Сортировка данных по фамилии<br>
-									- Сортировка данных по дню рождения (от старшего к младшему)<br>
-									- Сохранение данных в файл<br>
-									- Считывание данных из файла<br>
-								</p>
-	
-								<p>
-									<h6>Технологии: </h6>
-									C.
-								</p>
-							</li>
-
-						</ul>
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Car.jpg" alt="Image of car">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/Spb_cars_sales.git">Предсказания стоимости машины в СПб</a>
+							</h5>
+							<p class="card-text">Веб-приложение для предсказания стоимости подержанной машины в СПб по состоянию на середину февраля 2022 г.</p>
+						</div>
 					</div>
 				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Covid-19.jpg" alt="Covid-19">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/Covid-19_visualization">Covid-19 (дашборд)</a>
+							</h5>
+						  <p class="card-text">Веб-приложение для вывода статистики по распространению COVID-19.</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Phone.jpg" alt="Phone image">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/Phonebook">Телефонный справочник</a>
+							</h5>
+							<p class="card-text">Консольное приложение - телефонный справочник.</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div >
+
+		<div class="container">
+			<div>
+				<h2>Проекты, выполненные в рамках обучения в Школе 42</h2>
+			</div>
+
+			<div class="row">
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Library.jpg" alt="Library img">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/Libft">Libft</a>
+							</h5>
+							<p class="card-text"> Мой первый проект в Школе 42 - создание собственной библиотеки на C (написание стандартных функций из библиотеки libc и ряда вспомогательных функций для работы со строками и односвязными списками).</p>
+							<p class="card-text">Оценка: ✅111/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/GNL.jpg" alt="GNL">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/get_next_line">Get Next Line</a>
+							</h5>
+							<p class="card-text">Функция построчного чтения из файлового дескриптора.</p>
+							<p class="card-text">Оценка: ✅125/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Printer.jpg" alt="Printer">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/Printf">Printf</a>
+							</h5>
+						  <p class="card-text">Функция ft_printf, имитирующая действия функции printf в части обработки спецификаторов: cspdiuxX%.</p>
+						  <p class="card-text">Оценка: ✅100/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Sorting.jpg" alt="Push swap">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/Push_swap">Push swap</a>
+							</h5>
+							<p class="card-text">Сортировка входящих чисел методом <a href="https://ru.wikipedia.org/wiki/%D0%9F%D0%BE%D1%80%D0%B0%D0%B7%D1%80%D1%8F%D0%B4%D0%BD%D0%B0%D1%8F_%D1%81%D0%BE%D1%80%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%BA%D0%B0#:~:text=%D0%9F%D0%BE%D1%80%D0%B0%D0%B7%D1%80%D1%8F%D0%B4%D0%BD%D0%B0%D1%8F%20%D1%81%D0%BE%D1%80%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%BA%D0%B0%20(%D0%B0%D0%BD%D0%B3%D0%BB.,%D0%A1%D1%83%D1%89%D0%B5%D1%81%D1%82%D0%B2%D1%83%D1%8E%D1%82%20%D1%81%D1%82%D0%B0%D0%B1%D0%B8%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%B2%D0%B0%D1%80%D0%B8%D0%B0%D0%BD%D1%82%D1%8B.&text=%2C%20%D0%B3%D0%B4%D0%B5%20w%20%E2%80%94%20%D0%BA%D0%BE%D0%BB%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%BE%20%D0%B1%D0%B8%D1%82%2C%20%D1%82%D1%80%D0%B5%D0%B1%D1%83%D0%B5%D0%BC%D1%8B%D1%85%20%D0%B4%D0%BB%D1%8F%20%D1%85%D1%80%D0%B0%D0%BD%D0%B5%D0%BD%D0%B8%D1%8F%20%D0%BA%D0%B0%D0%B6%D0%B4%D0%BE%D0%B3%D0%BE%20%D0%BA%D0%BB%D1%8E%D1%87%D0%B0.">Radix</a>
+								с помощью 2 стеков и набора инструкций за минимальное число шагов.
+							</p>
+							<p class="card-text">Оценка: ✅84/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Chat.jpg" alt="Minitalk">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/Minitalk">Minitalk</a>
+							</h5>
+							<p class="card-text">Программа обмена данными с использованием сигналов UNIX (SIGUSR1 и SIGUSR2).</p>
+							<p class="card-text">Оценка: ✅125/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Philosophers.jpg" alt="Philosophers">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/Philosophers">Philosophers</a>
+							</h5>
+							<p class="card-text">Решение проблемы обедающих философов на С.</p>
+							<p class="card-text">Оценка: ✅100/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Map.jpg" alt="FDF">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/FDF">FDF</a>
+							</h5>
+							<p class="card-text">Отрисовка 3D карты на основе заданных координат.</p>
+							<p class="card-text">Оценка: ✅125/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Shell.jpg" alt="Minishell">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/Minishell">Minishell</a>
+							</h5>
+							<p class="card-text">Создание аналога оболочки bash (командный проект).</p>
+							<p class="card-text">Оценка: ✅101/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Containers.jpg" alt="Ft_containers">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/ft_containers">Ft_containers</a>
+							</h5>
+							<p class="card-text">Реализация контейнеров vector, stack, map, set из стандартной библиотеки C++98.</p>
+							<p class="card-text">Оценка: ✅125/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Webserv.jpg" alt="Webserver">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="">Webserv</a>
+							</h5>
+							<p class="card-text">Реализация собственного HTTP сервера на C++.</p>
+							<p class="card-text">Оценка: ✅116/100</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm"></div>
+				<div class="col-sm"></div>
+
+			</div>
+		</div>
+
+	</div>
   </body>
 
   <footer>
