english version changed

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 							<h5 class="card-title">
 								<a href="">Webserv</a>
 							</h5>
-							<p class="card-text">Реализация собственного HTTP сервера на C++.</p>
+							<p class="card-text">Реализация собственного HTTP сервера на C++ (командный проект).</p>
 							<p class="card-text">Оценка: ✅116/100</p>
 						</div>
 					</div>
