--- a/index_en.html
+++ b/index_en.html
@@ -183,175 +183,218 @@
 	  </div>
 	</section>
 
-	<div class="container">
+	<div class="container" style="margin-bottom: 2rem;">
+		
 		<div class="text-center">
 			<h1 id="scrollspyHeading3">Projects</h1>
 		</div>
-		<div class="card my-3">
-			<div class="accordion accordion-flush" id="accordionFlushExample">
-				<div class="accordion-item">
-				<h2 class="accordion-header" id="flush-headingOne">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-					School 42 projects
-					</button>
-				</h2>
-				<div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-					<div class="accordion-body">
-						<table>
-							<tr style="height: 2.5rem; background-color: #f4f4f4;">
-							  <th style="text-align: center;">Project</th>
-							  <th style="text-align: center;">Description</th>
-							  <th style="text-align: center;">Mark</th>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Libft">Libft</a>📚</td>
-								<td>My first project at 42 School - creating my own C library 
-									(recoding a set of functions from the libc and developing a set of functions that deal with strings and lists).	
-								</td>
-								<td style="text-align: center;">✅111/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/get_next_line">Get Next Line</a>🔁</td>
-								<td>Function that reads a file and returns a line ending with a newline character from a file descriptor.</td>
-								<td style="text-align: center;">✅125/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Printf">Printf</a>🖨</td>
-								<td>A simple printf implementation in C (function manages the following conversions: cspdiuxX%).</td>
-								<td style="text-align: center;">✅100/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Push_swap">Push swap</a>🔢</td>
-								<td>Sorting algoritm that uses 2 stacks and a set of instructions to manipulate both stacks.</td>
-								<td style="text-align: center;">✅84/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Minitalk">Minitalk</a>📠</td>
-								<td>Communication program in the form of client and server implemented using UNIX signals SIGUSR1 and SIGUSR2.</td>
-								<td style="text-align: center;">✅125/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/School_42/tree/main/Philosophers">Philosophers</a>🍴🍝</td>
-								<td>A solution to the dining philosophers problems in C using threads and mutex.</td>
-								<td style="text-align: center;">✅100/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/FDF">FDF</a>🌎</td>
-								<td>Simple wireframe model representation of a 3D landscape. 
-									The coordinates of the landscape are stored in a file passed as a parameter to the program.</td>
-								<td style="text-align: center;">✅125/100</td>
-							</tr>
-							<tr style="height: 2.5rem;">
-								<td><a href="https://github.com/DianaS96/Minishell">Minishell</a>🐌</td>
-								<td>Attempt to recode simple shell.<br>
-								Functional: <br>
-								<ul>
-									<li>Single and double quotes are handled</li>
-									<li>Redirections ('<', '<<', '>', '>>') and pipes ('|') are implemented</li>
-									<li>Environment variables are handled</li>
-									<li>$? expands to the exit status of the most recently executed foreground pipeline</li>
-									<li>Implemented builtins: echo, cd, pwd, export, unset, env, exit</li>
-									<li>Signals are processed:<br>
-										- use Ctrl+C to display new prompt on new line<br>
-										- Ctrl+D - to quit the program<br>
-										- Ctrl+\ - does nothing<br>
-									</li>
-								</ul>
-								</td>
-								<td style="text-align: center;">...</td>
-							</tr>
-						  </table>
+
+		<div class="container">
+			<div>
+				<h2>Pet projects</h2>
+			</div>
+
+			<div class="row">
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Food.jpg" alt="Image of food">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/Health_diet">PFC tracking app</a>
+							</h5>
+							<p class="card-text">Simple calorie and PFC (proteins, fats, carbohydrates) tracking web application 🥩🥗🍔 (калории, белки, жиры, углеводы)</p>
+						</div>
 					</div>
 				</div>
-				</div>
-				<div class="accordion-item">
-				<h2 class="accordion-header" id="flush-headingTwo">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-					Pet projects
-					</button>
-				</h2>
-				<div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-					<div class="accordion-body">
-						<ul style="list-style-type:square;">
-							<li>
-								<a href="https://github.com/DianaS96/Health_diet">
-									<h5>Simple calorie and PFC (proteins, fats, carbohydrates) tracking web application 🥩🥗🍔</h5>
-								</a>
-								<p><h6>Functionality:</h6>
-								- User should create an account to start using application.<br>
-								- User can access food calorie table and dicsover the caloric content for common russian foods.<br>
-								- User can add information on food consumed (type of product, product, amount and meal) to check on calories.<br>
-								- User can get statistics on food consumed and PFC for selected day.
-								</p>
-								<p>
-									<h6>Technologies: </h6>
-									Python3.10 (Flask, sqlite3, pandas, plotly and other libraries), HTML, CSS, Bootstrap, SQL, Docker.
-								</p>
-							</li>
 
-							<li>
-								<a href="https://github.com/DianaS96/Spb_cars_sales">
-									<h5>Used car price prediction web application* 🚗🤑</h5>
-								</a>
-								<p><h6>Functionality:</h6>
-									- User should enter vehicle characteristics: brand, carcase, year of manufacture, engine capacity, transmission, drive unit, end of guarantee.<br>
-									- After entering the data, the user will see the estimated car price.
-								</p>
-								<p>
-									<h6>Technologies: </h6>
-									Python3.10 (Flask, pandas, beautifulsoup, scikit-learn, CatBoost, LightGBM, XGBoost and other libraries), HTML, CSS, Bootstrap.
-								</p>
-								<p style="font-style: italic;">* Prediction of estimated car price is made based on sample data for used cars in SPb marcet collected before 24/02/2022.</p>
-							</li>
-
-							<li>
-								<a href="https://github.com/DianaS96/Covid-19_visualization">
-									<h5>Web application for displaying statistics on the spread of COVID-19 😷</h5>
-								</a>
-								<p><h6>Functionality:</h6>
-									- User shoul select country (or the world option)<br>
-									- After that user will see statistics<br>
-									Data for specified country: Total and daily cases of COVID-19 and deaths.<br>
-									World statistics:  Total and daily cases of COVID-19 and deaths, 
-									Top 10 countries with the highest number of confirmed COVID-19 cases, 
-									Top 10 countries with the highest number of deaths from COVID-19, 
-									Covid-19 spread in the world.<br>
-								</p>
-	
-								<p>
-									<h6>Technologies: </h6>
-									Python3.10 (Flask, pandas, plotly, matplotlib and other libraries), HTML, CSS, Bootstrap, Docker.
-								</p>
-							</li>
-
-							<li>
-								<a href="https://github.com/DianaS96/Phonebook">
-									<h5>Phonebook application ☎️</h5>
-								</a>
-								<p><h6>Functionality:</h6>
-									- input information about person<br>
-									- print all info from the phonebook<br>
-									- delete data under specific number (id)<br>
-									- sort data by surname (alphabetically)<br>
-									- sort friends by Birthday (from older to younger)<br>
-									- save data from the phonebook in a file<br>
-									- read data from a given file<br>
-								</p>
-	
-								<p>
-									<h6>Technologies: </h6>
-									C.
-								</p>
-							</li>
-
-						</ul>
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Car.jpg" alt="Image of car">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/Spb_cars_sales.git">Csr price prediction</a>
+							</h5>
+							<p class="card-text">Used car price prediction web application.
+								Prediction of estimated car price is made based on sample data for used cars in SPb market.
+							</p>
+						</div>
 					</div>
 				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Covid-19.jpg" alt="Covid-19">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/Covid-19_visualization">Covid-19 (dashboard)</a>
+							</h5>
+						  <p class="card-text">Web application for displaying statistics on the spread of COVID-19 😷</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Phone.jpg" alt="Phone image">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/Phonebook">Phonebook application</a>
+							</h5>
+							<p class="card-text">Phonebook application that allows input, print, delete and sort information.</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
+
+		<div class="container">
+			<div>
+				<h2>School 42 projects</h2>
+			</div>
+
+			<div class="row">
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Library.jpg" alt="Library img">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/Libft">Libft</a>
+							</h5>
+							<p class="card-text"> 
+								My first project at 42 School - creating my own C library 
+								(recoding a set of functions from the libc and developing a set of functions that deal with strings and lists).
+							</p>
+							<p class="card-text">Grade: ✅111/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/GNL.jpg" alt="GNL">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/get_next_line">Get Next Line</a>
+							</h5>
+							<p class="card-text">Function that reads a file and returns a line ending with a newline character from a file descriptor.</p>
+							<p class="card-text">Grade: ✅125/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Printer.jpg" alt="Printer">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/Printf">Printf</a>
+							</h5>
+						  <p class="card-text">A simple printf implementation in C (function manages the following conversions: cspdiuxX%).</p>
+						  <p class="card-text">Grade: ✅100/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Sorting.jpg" alt="Push swap">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/Push_swap">Push swap</a>
+							</h5>
+							<p class="card-text">
+								Sorting algoritm that uses 2 stacks and a set of instructions to manipulate both stacks.
+							</p>
+							<p class="card-text">Grade: ✅84/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Chat.jpg" alt="Minitalk">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/Minitalk">Minitalk</a>
+							</h5>
+							<p class="card-text">Communication program in the form of client and server implemented using UNIX signals SIGUSR1 and SIGUSR2.</p>
+							<p class="card-text">Grade: ✅125/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Philosophers.jpg" alt="Philosophers">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/School_42/tree/main/Philosophers">Philosophers</a>
+							</h5>
+							<p class="card-text">A solution to the dining philosophers problems in C using threads and mutex.</p>
+							<p class="card-text">Grade: ✅100/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Map.jpg" alt="FDF">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/FDF">FDF</a>
+							</h5>
+							<p class="card-text">Simple wireframe model representation of a 3D landscape. 
+								The coordinates of the landscape are stored in a file passed as a parameter to the program.</p>
+							<p class="card-text">Grade: ✅125/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Shell.jpg" alt="Minishell">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/Minishell">Minishell</a>
+							</h5>
+							<p class="card-text">Attempt to recode simple shell (team project).</p>
+							<p class="card-text">Grade: ✅101/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Containers.jpg" alt="Ft_containers">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="https://github.com/DianaS96/ft_containers">Ft_containers</a>
+							</h5>
+							<p class="card-text">Implementation of C++98 STL containers (vector, stack, map and set) and useful utilities.</p>
+							<p class="card-text">Grade: ✅125/100</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm">
+					<div class="card h-100" style="width: 18rem;">
+						<img class="card-img-top" src="photos/Webserv.jpg" alt="Webserver">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="">Webserv</a>
+							</h5>
+							<p class="card-text">Implementation of HTTP server (C++98, team project).</p>
+							<p class="card-text">Grade: ✅116/100</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm"></div>
+				<div class="col-sm"></div>
+
+			</div>
+		</div>
+
 	</div>
-  </body>
 
   <footer>
 		<section class="footer">
