--- a/index_en.html
+++ b/index_en.html
@@ -212,7 +212,7 @@
 						<img class="card-img-top" src="photos/Car.jpg" alt="Image of car">
 						<div class="card-body">
 							<h5 class="card-title">
-								<a href="https://github.com/DianaS96/Spb_cars_sales.git">Csr price prediction</a>
+								<a href="https://github.com/DianaS96/Spb_cars_sales.git">Car price prediction</a>
 							</h5>
 							<p class="card-text">Used car price prediction web application.
 								Prediction of estimated car price is made based on sample data for used cars in SPb market.
@@ -390,11 +390,11 @@
 				</div>
 				<div class="col-sm"></div>
 				<div class="col-sm"></div>
-
 			</div>
 		</div>
 
 	</div>
+
 
   <footer>
 		<section class="footer">
